<resources>
    <string name="app_name">HOMEWORKS</string>
    <string name="textView">Homework</string>
    <string name="textView2">My First App</string>
    <string name="button1">HW #1</string>
    <string name="button2">HW #2</string>
    <string name="button3">HW #3</string>
    <string name="button4">HW #4</string>
    <string name="button5">Sign up</string>
    <string name="textSize">40dp</string>
    <string name="fontFamily">sans-serif-medium</string>
    <string name="editText">Enter image URL</string>
    <string name="belarus">Belarus</string>
    <string name="latvia">Latvia</string>
    <string name="poland">Poland</string>
    <string name="lithuania">Lithuania</string>
    <string name="ukraine">Ukraine</string>
    <string name="minsk">Minsk</string>
    <string name="pinsk">Pinsk</string>
    <string name="brest">Brest</string>
    <string name="potatoes">Potatoes:</string>
    <string name="cabbage">Cabbage:</string>
    <string name="carrot">Carrot:</string>
    <string name="start">Start</string>
    <string name="show_coffee">Show coffee collection</string>
    <string name="name_coffee">Enter name of coffee</string>
    <string name="price_coffee">Enter price of coffee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="supporting_text">Hello</string>
    <string name="supporting_text_error">Error</string>
    <string name="cancel">OK</string>
    <string name="accept">Sign in</string>
</resources>